--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-GOOGLE_APPLICATION_CREDENTIALS=/content/awesome-aspect-455006-b6-56a66c72947e.json
+GOOGLE_APPLICATION_CREDENTIALS=C:\Users\srila\Downloads\awesome-aspect-455006-b6-56a66c72947e.json
